# little-languages

./: .gitignore  README.md  atom.xml  index.html  rss.xml
blog/: index.md  little-languages-blog.cabal  site.hs
code/i/: default.nix  i.cabal  shell.nix
code/i/src/: Term.hs  Type.hs
code/i/src/Common/: Parse.hs  Pretty.hs  Text.hs
code/i/src/Term/: Gen.hs  Infer.hs  Parse.hs  Pretty.hs
code/i/src/Term/Eval/: BigStep.hs  SmallStep.hs  Value.hs
code/i/src/Type/: Error.hs  Gen.hs  Parse.hs  Pretty.hs
code/i/src/Type/Error/: Pretty.hs
code/i/tests/: Test.hs  doctests.hs
code/i/tests/Test/: Common.hs
code/i/tests/Test/Common/: Text.hs
code/i/tests/Test/Term/: Eval.hs  Infer.hs  Structure.hs  Text.hs
code/modular/b-lang/: b-lang.cabal
code/modular/b-lang/src/Component/: Bool.hs
code/modular/b-lang/src/Component/Term/: Bool.hs
code/modular/b-lang/src/Component/Term/Bool/: Gen.hs  Infer.hs  Parse.hs  Pretty.hs  Size.hs  Strip.hs  SubTerm.hs
code/modular/b-lang/src/Component/Term/Bool/Eval/: BigStep.hs  SmallStep.hs  Value.hs
code/modular/b-lang/src/Component/Type/: Bool.hs
code/modular/b-lang/src/Component/Type/Bool/: Gen.hs  Parse.hs  Pretty.hs
code/modular/b-lang/src/Components/: Bool.hs
code/modular/b-lang/src/Components/Term/: Bool.hs
code/modular/b-lang/src/Components/Term/Bool/: Gen.hs  Infer.hs  Parse.hs  Pretty.hs  Size.hs
code/modular/b-lang/src/Components/Term/Bool/Eval/: BigStep.hs  SmallStep.hs  Value.hs  Values.hs
code/modular/b-lang/src/Components/Type/: Bool.hs
code/modular/b-lang/src/Components/Type/Bool/: Gen.hs  Parse.hs  Pretty.hs
code/modular/n-lang/: n-lang.cabal
code/modular/n-lang/src/Component/: Nat.hs
code/modular/n-lang/src/Component/Term/: Nat.hs
code/modular/n-lang/src/Component/Term/Nat/: Gen.hs  Infer.hs  Parse.hs  Pretty.hs  Size.hs  Strip.hs  SubTerm.hs
code/modular/n-lang/src/Component/Term/Nat/Eval/: BigStep.hs  SmallStep.hs  Value.hs
code/modular/n-lang/src/Component/Type/: Nat.hs
code/modular/n-lang/src/Component/Type/Nat/: Gen.hs  Parse.hs  Pretty.hs  Strip.hs
code/modular/n-lang/src/Components/: Nat.hs
code/modular/n-lang/src/Components/Term/: Nat.hs
code/modular/n-lang/src/Components/Term/Nat/: Gen.hs  Infer.hs  Parse.hs  Pretty.hs  Size.hs
code/modular/n-lang/src/Components/Term/Nat/Eval/: BigStep.hs  SmallStep.hs  Value.hs
code/modular/n-lang/src/Components/Type/: Nat.hs
code/modular/n-lang/src/Components/Type/Nat/: Gen.hs  Parse.hs  Pretty.hs
code/modular/nb-lang/: nb-lang.cabal
code/modular/nb-lang/src/Component/: NatBool.hs
code/modular/nb-lang/src/Component/Term/: NatBool.hs
code/modular/nb-lang/src/Component/Term/NatBool/: Gen.hs  Infer.hs  Parse.hs  Pretty.hs  Size.hs  Strip.hs  SubTerm.hs
code/modular/nb-lang/src/Component/Term/NatBool/Eval/: BigStep.hs  SmallStep.hs  Value.hs
code/modular/test-lang/: test-lang.cabal
code/modular/test-lang/repl/: Main.hs
code/modular/test-lang/src/: TestLanguage.hs
code/modular/test-lang/tests/: Test.hs
code/old/modular/b-lang/: b-lang.cabal  default.nix  shell.nix
code/old/modular/b-lang/src/Component/Term/: Bool.hs
code/old/modular/b-lang/src/Component/Term/Bool/: Infer.hs  Parse.hs  Pretty.hs
code/old/modular/b-lang/src/Component/Term/Bool/Eval/: SmallStep.hs
code/old/modular/b-lang/src/Component/Type/: Bool.hs
code/old/modular/b-lang/src/Component/Type/Bool/: Gen.hs  Parse.hs  Strip.hs
code/old/modular/i-lang/: i-lang.cabal
code/old/modular/i-lang/src/Component/Term/: Int.hs
code/old/modular/i-lang/src/Component/Term/Int/: Gen.hs  Infer.hs  Pretty.hs
code/old/modular/i-lang/src/Component/Type/: Int.hs
code/old/modular/i-lang/src/Component/Type/Int/: Pretty.hs
code/old/modular/stlc-lang/: stlc-lang.cabal
code/old/modular/stlc-lang/src/Component/: STLC.hs
code/old/modular/stlc-lang/src/Component/Term/: STLC.hs
code/old/modular/stlc-lang/src/Component/Term/STLC/: Infer.hs  Parse.hs  Pretty.hs  SubTerm.hs
code/old/modular/stlc-lang/src/Component/Term/STLC/Eval/: BigStep.hs  Value.hs
code/old/modular/stlc-lang/src/Component/Type/: STLC.hs
code/old/modular/stlc-lang/src/Component/Type/Error/: FreeVar.hs  NotArrow.hs
code/old/multityped/nb-modular/: nb-modular.cabal  shell.nix
code/old/multityped/nb-modular/src/: Common.hs
code/old/multityped/nb-modular/src/Common/: Gen.hs  Recursion.hs  Term.hs
code/old/multityped/nb-modular/src/Common/Term/: Gen.hs  Infer.hs  Parse.hs
code/old/multityped/nb-modular/src/Common/Test/: Term.hs  Type.hs
code/old/multityped/nb-modular/src/Common/Test/Term/: Infer.hs
code/old/multityped/nb-modular/src/Common/Type/: Error.hs  Gen.hs
code/old/multityped/nb-modular/src/Components/Term/: NatBool.hs  Note.hs
code/old/multityped/nb-modular/src/Components/Term/Bool/: Pretty.hs
code/old/multityped/nb-modular/src/Components/Term/Bool/Eval/: BigStep.hs  Value.hs
code/old/multityped/nb-modular/src/Components/Term/Nat/: Data.hs  Gen.hs  Parse.hs  Pretty.hs
code/old/multityped/nb-modular/src/Components/Term/Nat/Eval/: Value.hs
code/old/multityped/nb-modular/src/Components/Term/NatBool/: Gen.hs  Infer.hs  Parse.hs
code/old/multityped/nb-modular/src/Components/Term/Note/: Gen.hs  Parse.hs
code/old/multityped/nb-modular/src/Components/Type/: Bool.hs
code/old/multityped/nb-modular/src/Components/Type/Bool/: Data.hs  Parse.hs  Pretty.hs
code/old/multityped/nb-modular/src/Components/Type/Nat/: Parse.hs  Pretty.hs
code/old/multityped/nb-modular/src/Components/Type/Note/: Data.hs
code/old/multityped/nb-modular/src/Language/: NB.hs
code/old/multityped/nb-modular/src/Language/NB/: Term.hs  Type.hs
code/old/multityped/nb-modular/src/Language/NB/Type/: Error.hs
code/old/multityped/nb-modular/tests/Test/: Type.hs
code/old/multityped/nb-modular/tests/Test/Term/: Eval.hs
code/old/prototypes/prod/: prod.cabal
code/old/prototypes/prod/src/: Data.hs  Decl.hs  Term.hs  TypeCheck.hs
code/old/prototypes/syntax/: shell.nix  syntax.cabal
code/old/prototypes/syntax/src/Term/: Pretty.hs
code/prototypes/lc-named/: lc-named.cabal  shell.nix
(+611 files in other folders)
