name:                i
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Common.Parse
                     , Common.Pretty
                     , Common.Text
                     , Term
                     , Term.Eval.Value
                     , Term.Eval.SmallStep
                     , Term.Eval.BigStep
                     , Term.Infer
                     , Term.Pretty
                     , Term.Parse
                     , Term.Gen
                     , Type
                     , Type.Pretty
                     , Type.Parse
                     , Type.Gen
                     , Type.Error
                     , Type.Error.Pretty
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , QuickCheck >=2.8 && <2.9
                     , parsers >=0.12 && <0.13
                     , unordered-containers >=0.2 && <0.3
                     , trifecta >=1.5 && <1.6
                     , ansi-wl-pprint >=0.6 && <0.7
                     , mtl >= 2.2 && < 2.3 
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Test.hs
  other-modules:       Test.Common
                     , Test.Common.Text
                     , Test.Term
                     , Test.Term.Structure
                     , Test.Term.Eval
                     , Test.Term.Infer
                     , Test.Term.Text
                     , Test.Type
                     , Test.Type.Text
  build-depends:         base               >= 4.8  && < 4.9
                       , tasty              >= 0.11 && < 0.12
                       , tasty-quickcheck   >= 0.8 && < 0.9
                       , QuickCheck         >= 2.8 && < 2.9
                       , containers         >= 0.5 && < 0.6
                       , parsers >=0.12 && <0.13
                       , ansi-wl-pprint >=0.6 && <0.7
                       , i
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

test-suite doctests
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded
  main-is:            doctests.hs
  build-depends:        base >4 && <5
                      , doctest >= 0.11 && < 0.12
                      , QuickCheck >= 2.8 && < 2.9
                      , i
  HS-Source-Dirs:     tests

executable repl
  main-is:             Main.hs
  build-depends:       base >= 4.8 && < 4.9
                     , ansi-wl-pprint >=0.6 && <0.7
                     , haskeline >= 0.7 && < 0.8
                     , transformers >= 0.4 && < 0.5
                     , i
  hs-source-dirs:      repl
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

