name:                b-lang
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Components.Bool
                     , Components.Term.Bool
                     , Components.Term.Bool.Size
                     , Components.Term.Bool.Eval.Value
                     , Components.Term.Bool.Eval.SmallStep
                     , Components.Term.Bool.Eval.BigStep
                     , Components.Term.Bool.Infer
                     , Components.Term.Bool.Parse
                     , Components.Term.Bool.Pretty
                     , Components.Term.Bool.Gen
                     , Components.Type.Bool
                     , Components.Type.Bool.Parse
                     , Components.Type.Bool.Pretty
                     , Components.Type.Bool.Gen
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , QuickCheck >=2.8 && <2.9
                     , unordered-containers >=0.2 && <0.3
                     , parsers >=0.12 && <0.13
                     , trifecta >=1.5 && <1.6
                     , ansi-wl-pprint >=0.6 && <0.7
                     , mtl >= 2.2 && < 2.3 
                     , lens >= 4.13 && < 4.14
                     , bound >= 1.0 && < 1.1
                     , common-lang
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

