name:                n-lang
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Components.Nat
                     , Components.Term.Nat
                     , Components.Term.Nat.Size
                     , Components.Term.Nat.Eval.Value
                     , Components.Term.Nat.Eval.SmallStep
                     , Components.Term.Nat.Eval.BigStep
                     , Components.Term.Nat.Infer
                     , Components.Term.Nat.Parse
                     , Components.Term.Nat.Pretty
                     , Components.Term.Nat.Gen
                     , Components.Type.Nat
                     , Components.Type.Nat.Parse
                     , Components.Type.Nat.Pretty
                     , Components.Type.Nat.Gen
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , QuickCheck >=2.8 && <2.9
                     , unordered-containers >=0.2 && <0.3
                     , parsers >=0.12 && <0.13
                     , trifecta >=1.5 && <1.6
                     , ansi-wl-pprint >=0.6 && <0.7
                     , mtl >= 2.2 && < 2.3 
                     , lens >= 4.13 && < 4.14
                     , bound >= 1.0 && < 1.1
                     , common-lang
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

