name:                n-lang
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Component.Nat
                     , Component.Term.Nat
                     , Component.Term.Nat.Size
                     , Component.Term.Nat.Eval.Value
                     , Component.Term.Nat.Eval.SmallStep
                     , Component.Term.Nat.Eval.BigStep
                     , Component.Term.Nat.Infer
                     , Component.Term.Nat.Parse
                     , Component.Term.Nat.Pretty
                     , Component.Term.Nat.Gen
                     , Component.Type.Nat
                     , Component.Type.Nat.Parse
                     , Component.Type.Nat.Pretty
                     , Component.Type.Nat.Gen
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , QuickCheck >=2.8 && <2.9
                     , unordered-containers >=0.2 && <0.3
                     , parsers >=0.12 && <0.13
                     , trifecta >=1.5 && <1.6
                     , ansi-wl-pprint >=0.6 && <0.7
                     , mtl >= 2.2 && < 2.3 
                     , lens >= 4.13 && < 4.14
                     , bifunctors >= 5.2 && < 5.3
                     , bound >= 1.0 && < 1.1
                     , common-lang
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

