name:                test-lang
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     TestLanguage
  -- other-modules:       
  -- other-extensions:    
  build-depends:         base >=4.8 && <4.9
                       , lens >= 4.13 && < 4.14
                       , trifecta >=1.5 && <1.6
                       , common-lang
                       , b-lang
                       , n-lang
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Test.hs
  build-depends:         base               >= 4.8  && < 4.9
                       , tasty              >= 0.11 && < 0.12
                       , common-lang
                       , test-lang
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

executable repl
  main-is:             Main.hs
  build-depends:       base >= 4.8 && < 4.9
                     , trifecta >=1.5 && <1.6
                     , common-lang
                     , test-lang
  hs-source-dirs:      repl
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

