name:                b-lang
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Component.Bool
                     , Component.Term.Bool
                     , Component.Term.Bool.SubTerm
                     , Component.Term.Bool.Eval.Value
                     , Component.Term.Bool.Eval.SmallStep
                     , Component.Term.Bool.Eval.BigStep
                     , Component.Term.Bool.Infer
                     , Component.Term.Bool.Parse
                     , Component.Term.Bool.Pretty
                     , Component.Term.Bool.Gen
                     , Component.Type.Bool
                     , Component.Type.Bool.Parse
                     , Component.Type.Bool.Pretty
                     , Component.Type.Bool.Gen
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.10
                     , QuickCheck >=2.8 && <2.9
                     , unordered-containers >=0.2 && <0.3
                     , parsers >=0.12 && <0.13
                     , trifecta >=1.5 && <1.6
                     , ansi-wl-pprint >=0.6 && <0.7
                     , mtl >= 2.2 && < 2.3 
                     , lens >= 4.13 && < 4.14
                     , bifunctors >= 5.2 && < 5.3
                     , bound >= 1.0 && < 1.1
                     , common-lang
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

