name:                stlc-lang
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Component.STLC
                     , Component.Term.STLC
                     , Component.Term.STLC.SubTerm
                     , Component.Term.STLC.Eval.Value
                     , Component.Term.STLC.Eval.SmallStep
                     , Component.Term.STLC.Eval.BigStep
                     , Component.Term.STLC.Infer
                     , Component.Term.STLC.Parse
                     , Component.Term.STLC.Pretty
                     -- , Component.Term.STLC.Gen
                     , Component.Type.STLC
                     , Component.Type.STLC.Parse
                     , Component.Type.STLC.Pretty
                     -- , Component.Type.STLC.Gen
                     , Component.Type.Error.FreeVar
                     , Component.Type.Error.NotArrow
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.10
                     , QuickCheck >=2.8 && <2.9
                     , unordered-containers >=0.2 && <0.3
                     , parsers >=0.12 && <0.13
                     , trifecta >=1.5 && <1.6
                     , ansi-wl-pprint >=0.6 && <0.7
                     , mtl >= 2.2 && < 2.3 
                     , lens >= 4.13 && < 4.14
                     , containers >= 0.5 && < 0.6
                     , bifunctors >= 5.2 && < 5.3
                     , bound >= 1.0 && < 1.1
                     , constraints >= 0.8 && < 0.9
                     , common-lang
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

