name:                prod
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:       Term
                       , Type
                       , TypeCheck
                       , Decl
                       -- , Term.Pretty
                       -- , Term.Parser
  -- other-modules:       
  -- other-extensions: 
  build-depends:         QuickCheck >=2.8 && <2.9
                       , ansi-wl-pprint >= 0.6 && < 0.7
                       , base >=4.8 && <4.9
                       , bound >=1.0 && <1.1
                       , parsers
                       , prelude-extras >=0.4 && <0.5
                       , trifecta
                       , unordered-containers
                       , containers
                       , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
